2003-03-27  WATANABE Katsuyuki <knabe@sannet.ne.jp>

	* [w3m-dev 03831] fix typo
	* acinclude.m4 (AC_W3M_LANG): SYSTEM_CODE
	* configure.in: fix typo CYGIN

2003-03-27  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03830] Image size of gif animation
	* w3mimg/fb/fb_gdkpixbuf.c (get_animation_size): added
		(get_image_size): use get_animation_size()
		(fb_image_load): ditto
	* w3mimg/x11/x11_w3mimg.c (get_animation_size): added
		(x11_load_image): use get_animation_size()
		(x11_get_image_size): ditto

2003-03-25  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03829] w3mimgdisplay -anim
	* w3mimgdisplay.c (maxAnim): added, default 100
		(main): add --anim option, w_op->max_anim
	* w3mimg/w3mimg.h (w3mimg_op): add max_anim
	* w3mimg/fb/fb_gdkpixbuf.c (fb_image_load): add max_anim
	* w3mimg/fb/fb_img.h (fb_image_load): add max_anim args
	* w3mimg/fb/fb_imlib2.c (fb_image_load): add max_anim args
	* w3mimg/fb/fb_w3mimg.c (w3mfb_load_image): pass max_anim
	* w3mimg/x11/x11_w3mimg.c (x11_load_image): max_anim

2003-03-24  Daiki Ueno <ueno@unixuser.org>

	* [w3m-dev 03828] possible typo in nextA
	* main.c (nextA): fix typo?

2003-03-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03827] Re: checking for GC_version... no
	* configure.in: add dl for extlibs

2003-03-20  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03825] re-anchor for fold line
	* anchor.c (reAnchorPos): fix for fold line

2003-03-20  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00910] Re: autoconf: env MAKE not respected
	* Makefile.in (SET_MAKE): added
		(SHELL): added

2003-03-19  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev-en 00908] Re: autoconf: --without-migemo is a nop
	* acinclude.m4 (AC_W3M_MIGEMO): dont define USE_MIGEMO 
				when with_migemo=no

2003-03-14  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03823] Re: etc.c: treatment for "%7E" is added to  expandName()
	* url.c (parseURL2): file unquote
	* etc.c (expandName): revert previous changes
