@@ -1,4 +1,4 @@
-/* $Id: fb_w3mimg.c,v 1.9 2003/03/24 15:46:00 ukai Exp $ */
+/* $Id: fb_w3mimg.c,v 1.10 2003/03/26 15:34:19 ukai Exp $ */
 #include <stdio.h>
 #include <stdlib.h>
 #include <ctype.h>
@@ -92,6 +92,10 @@ w3mfb_show_image(w3mimg_op * self, W3MImage * img, int sx, int sy,
 
     frame = (FB_IMAGE **) img->pixmap;
     i = frame[0]->id;
+    while (i < frame[0]->num - 1 && frame[i]->delay <= 0) {
+	frame[0]->id += 1;
+	i = frame[0]->id;
+    }
     fb_image_draw(frame[i],
 		  x + self->offset_x, y + self->offset_y,
 		  sx, sy, (sw ? sw : img->width), (sh ? sh : img->height));
